# WaveCap

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.jupyter  README.md  SPEC.md  com.wavecap.server.plist  docker-compose.yml  record.sh  service-ctl.sh  start-app.ps1  start-app.sh  start-screenshot.sh
.githooks/: post-merge  (+2 more)
backend/: README.md  default-config.yaml  pyproject.toml
backend/audio_regression/: README.md
backend/src/wavecap_backend/: __init__.py  __main__.py  alerts.py  audio_processing.py  audio_regression.py  auth.py  config.py  database.py  datetime_utils.py  fixtures.py  llm_corrector.py  logging_utils.py  models.py  pager_formats.py  remote_streams.py  request_utils.py  sdr.py  server.py  state_paths.py  stream_defaults.py  stream_manager.py  stream_worker.py  transcription_executor.py  transcription_postprocessor.py  trunked_radio.py  waveform.py  whisper_transcriber.py
backend/src/wavecap_backend/static/: index.html
backend/src/wavecap_backend/tools/: __init__.py  export_transcriptions.py  run_audio_regression.py  validate_pager_messages.py
backend/tests/: conftest.py  test_alerts.py  test_audio_processing.py  test_audio_regression_suite.py  test_auth.py  test_config_paths.py  test_database.py  test_datetime_utils.py  test_fixtures.py  test_llm_corrector.py  test_main_entrypoint.py  test_pager_formats.py  test_request_utils.py  test_sdr.py  test_server.py  test_stream_manager.py  test_stream_worker.py  test_transcription_executor.py  test_transcription_postprocessor.py  test_waveform.py  test_whisper_transcriber.py
(+177 files in other folders)
